@@ -21,6 +21,7 @@ minprocs=200                ; (min. avail process descriptors;default 200)
 ;user=chrism                 ; (default is current user, required if root)
 ;directory=/tmp              ; (default is not to cd during start)
 ;environment=KEY=value       ; (key value pairs to add to environment)
+;strip_ansi=false            ; (strip ansi escape codes from stdout; def. false)
 
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
